--- a/src/components/TechScroll.astro
+++ b/src/components/TechScroll.astro
@@ -25,7 +25,7 @@ const techs = [
             [...techs, ...techs, ...techs].map((tech) => (
                 <div class="flex items-center gap-2 group transition-all duration-300">
                     <img 
-                        src={`/src/assets/icons/${tech}.svg`} 
+                        src={`/assets/${tech}.svg`} 
                         alt={tech} 
                         class="h-7 w-auto object-contain transition-transform group-hover:scale-110 opacity-60"
                         width="30"
